force-app/main/default/objects/Opportunity/fields/NS_Origin_Station__c.field-meta.xml
<CustomField>
    <fullName>NS_Origin_Station__c</fullName>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Origin Station</label>
    <length>250</length>
    <type>Text</type>
</CustomField>