force-app/main/default/objects/Opportunity/fields/NS_Origin_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Origin_Type__c</fullName>
    <description>workbench</description>
    <label>Origin Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>