force-app/main/default/objects/Opportunity/fields/NS_Originating_Department__c.field-meta.xml
<CustomField>
    <fullName>NS_Originating_Department__c</fullName>
    <description>Sales - Required field to indicate the NS Business Unit that the Opportunity derived. Field will drive workbench data as well as account classification</description>
    <label>Originating Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Network Optimization</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
                <default>true</default>
                <label>Transportation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>