force-app/main/default/objects/Opportunity/fields/NS_Overwrite_Replace_of_Existing_Deal__c.field-meta.xml
<CustomField>
    <fullName>NS_Overwrite_Replace_of_Existing_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IM reqeust</description>
    <label>Overwrite/Replace of Existing Deal</label>
    <type>Checkbox</type>
</CustomField>