force-app/main/default/objects/Opportunity/fields/NS_Partner_Account_1__c.field-meta.xml
<CustomField>
    <fullName>NS_Partner_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>