force-app/main/default/objects/Opportunity/fields/NS_Partner_Account_2__c.field-meta.xml
<CustomField>
    <fullName>NS_Partner_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner Account 2)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>