force-app/main/default/objects/Opportunity/fields/NS_Partner_Account_3__c.field-meta.xml
<CustomField>
    <fullName>NS_Partner_Account_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner Account 3)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>