force-app/main/default/objects/Opportunity/fields/NS_Partner_Account_Type_1__c.field-meta.xml
<CustomField>
    <fullName>NS_Partner_Account_Type_1__c</fullName>
    <description>describe the role or type of partner this account is in relation to the opportunity</description>
    <label>Partner Account Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*3PL</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Drayage</fullName>
            </value>
            <value>
                <fullName>ID Allies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Shipper &amp; Receiver</fullName>
            </value>
            <value>
                <fullName>TBT</fullName>
            </value>
            <value>
                <fullName>Transload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>