force-app/main/default/objects/Opportunity/fields/NS_Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>NS_Partner_Notes__c</fullName>
    <description>text area near partner accounts to describe details of the partner and relationship to the oppty</description>
    <label>Partner Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>