force-app/main/default/objects/Opportunity/fields/NS_Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>NS_Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>