force-app/main/default/objects/Opportunity/fields/NS_Primary_Conversion_Reason__c.field-meta.xml
<CustomField>
    <fullName>NS_Primary_Conversion_Reason__c</fullName>
    <description>Sales - IM request to select conversion reason. Will need to include other with tree text field if selected</description>
    <label>Primary Conversion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid Award</fullName>
            </value>
            <value>
                <fullName>Business or plant closure/bankruptcy</fullName>
            </value>
            <value>
                <fullName>Competitor Capacity (i.e. truck capacity)</fullName>
            </value>
            <value>
                <fullName>Competitor Customer Service</fullName>
            </value>
            <value>
                <fullName>Competitor Service Change (new or cancelled service)</fullName>
            </value>
            <value>
                <fullName>Extreme Weather Event</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>NS Customer Service</fullName>
            </value>
            <value>
                <fullName>NS Equipment Capacity/Quality</fullName>
            </value>
            <value>
                <fullName>NS New or Cancelled Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>