force-app/main/default/objects/Opportunity/fields/NS_Priority__c.field-meta.xml
<CustomField>
    <fullName>NS_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if oppty is a priority</description>
    <inlineHelpText>Please check if the Opportunity is a Priority</inlineHelpText>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>