force-app/main/default/objects/Opportunity/fields/NS_Private__c.field-meta.xml
<CustomField>
    <fullName>NS_Private__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>