force-app/main/default/objects/Opportunity/fields/NS_R_C__c.field-meta.xml
<CustomField>
    <fullName>NS_R_C__c</fullName>
    <description>Sales - IM request to show the Revenue Cost Ratio annually</description>
    <inlineHelpText>Revenue Cost Ratio</inlineHelpText>
    <label>R/C</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>