force-app/main/default/objects/Opportunity/fields/NS_Railroad_Partner_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NS_Railroad_Partner_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a railroad is a partner on this opportunity</description>
    <label>Railroad Partner Opportunity</label>
    <type>Checkbox</type>
</CustomField>