force-app/main/default/objects/Opportunity/fields/NS_Rate_Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Rate_Adjustment_Date__c</fullName>
    <description>date of the adjustment, could happen more than once, request from IM</description>
    <label>Rate Adjustment Date</label>
    <type>Date</type>
</CustomField>