force-app/main/default/objects/Opportunity/fields/NS_Rate_Bureau_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Rate_Bureau_Number__c</fullName>
    <description>Workbench or upload?</description>
    <label>Rate Bureau Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>