force-app/main/default/objects/Opportunity/fields/NS_Rate_Bureau_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Rate_Bureau_Type__c</fullName>
    <description>NS to provide listing of Rate Bureau or will become a text field</description>
    <label>Rate Bureau Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>NSSC</fullName>
            </value>
            <value>
                <fullName>NSSQ</fullName>
            </value>
            <value>
                <fullName>NSQ</fullName>
            </value>
            <value>
                <fullName>NSRQ</fullName>
            </value>
            <value>
                <fullName>NSCQ</fullName>
            </value>
            <value>
                <fullName>NSSM</fullName>
            </value>
            <value>
                <fullName>NSPQ</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>