force-app/main/default/objects/Opportunity/fields/NS_Rate_Increase_Expected__c.field-meta.xml
<CustomField>
    <fullName>NS_Rate_Increase_Expected__c</fullName>
    <description>IM request</description>
    <label>Rate Increase Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>