force-app/main/default/objects/Opportunity/fields/NS_Rate_Offered__c.field-meta.xml
<CustomField>
    <fullName>NS_Rate_Offered__c</fullName>
    <description>Sales - authorized price for transporting IM request</description>
    <label>Rate Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>