force-app/main/default/objects/Opportunity/fields/NS_RPU__c.field-meta.xml
<CustomField>
    <fullName>NS_RPU__c</fullName>
    <description>Sales - IM request to capture the annual revenue per unit</description>
    <inlineHelpText>Revenue Per Unit</inlineHelpText>
    <label>RPU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>