force-app/main/default/objects/Opportunity/fields/NS_SalesNPO_Approvers__c.field-meta.xml
<CustomField>
    <fullName>NS_SalesNPO_Approvers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>