force-app/main/default/objects/Opportunity/fields/NS_Signing_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>NS_Signing_Bonus_Amount__c</fullName>
    <description>If applicable - IM request</description>
    <label>Signing Bonus Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>