force-app/main/default/objects/Opportunity/fields/NS_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Stage_Change_Date__c</fullName>
    <description>Hidden field to record the date the Stage field changes - for use in Opportunity Inactivity Notification Process</description>
    <label>Stage Change Date</label>
    <type>Date</type>
</CustomField>