force-app/main/default/objects/Opportunity/fields/NS_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>NS_Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>