force-app/main/default/objects/Opportunity/fields/NS_Temperature_Reefer_Controlled__c.field-meta.xml
<CustomField>
    <fullName>NS_Temperature_Reefer_Controlled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales - IM request to  check if the car is refrigerated</description>
    <label>Temperature Controlled / Reefer</label>
    <type>Checkbox</type>
</CustomField>