force-app/main/default/objects/Opportunity/fields/NS_Temporary_Spot_Only__c.field-meta.xml
<CustomField>
    <fullName>NS_Temporary_Spot_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Checkbox to indicate if the opportunity is a spot move or a temporary move. Req. from IM</description>
    <label>Temporary/Spot Only</label>
    <type>Checkbox</type>
</CustomField>