force-app/main/default/objects/Opportunity/fields/NS_Traffic_Committed__c.field-meta.xml
<CustomField>
    <fullName>NS_Traffic_Committed__c</fullName>
    <description>Sales - IM request to mark if traffic is committed or not on an opportunity</description>
    <label>Traffic Committed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>