force-app/main/default/objects/Opportunity/fields/NS_Traffic_Move_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Traffic_Move_Type__c</fullName>
    <description>Sales - to capture the type of move including the name of the foreign lines part of the deal</description>
    <label>Traffic Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both NS Local &amp; Interline</fullName>
            </value>
            <value>
                <fullName>Interline</fullName>
            </value>
            <value>
                <fullName>NS Local</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
                <isActive>false</isActive>
                <label>Local</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>