force-app/main/default/objects/Opportunity/fields/NS_Traffic_Moving__c.field-meta.xml
<CustomField>
    <fullName>NS_Traffic_Moving__c</fullName>
    <description>Will make sense if traffic info can by brought over from Workbench.</description>
    <label>Traffic Moving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>