force-app/main/default/objects/Opportunity/fields/NS_Volume_Commitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>NS_Volume_Commitment_Amount__c</fullName>
    <description>estimate volume commitment from customer specifically used by Intermodal</description>
    <label>Volume Commitment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>