force-app/main/default/objects/Opportunity/fields/NS_WB_RequestID__c.field-meta.xml
<CustomField>
    <fullName>NS_WB_RequestID__c</fullName>
    <description>Workbench request unique identifier</description>
    <label>Request ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>