force-app/main/default/objects/Opportunity/fields/NS_WB_RequestNum__c.field-meta.xml
<CustomField>
    <fullName>NS_WB_RequestNum__c</fullName>
    <description>Industrial Product Workbench rate request number</description>
    <label>Request Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>