force-app/main/default/objects/Opportunity/fields/NSSales609_1_CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>NSSales609_1_CompletedDate__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>