force-app/main/default/objects/Opportunity/fields/NSSales609_1_InitaitedDate__c.field-meta.xml
<CustomField>
    <fullName>NSSales609_1_InitaitedDate__c</fullName>
    <label>Initiated Date</label>
    <type>Date</type>
</CustomField>