force-app/main/default/objects/Opportunity/fields/NSSales609_1_OpptyNumber__c.field-meta.xml
<CustomField>
    <fullName>NSSales609_1_OpptyNumber__c</fullName>
    <displayFormat>ON -{0000}</displayFormat>
    <label>609.1 Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>