force-app/main/default/objects/Opportunity/fields/NSSales609_1_RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>NSSales609_1_RequestedBy__c</fullName>
    <label>Requested by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>