force-app/main/default/objects/Opportunity/fields/NSSales_609_1_AnnualCarloads__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_AnnualCarloads__c</fullName>
    <label>Annual Carloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>