force-app/main/default/objects/Opportunity/fields/NSSales_609_1_AnnualMantFeePayment__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_AnnualMantFeePayment__c</fullName>
    <label>Annual Maintenance Fee Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>