force-app/main/default/objects/Opportunity/fields/NSSales_609_1_ApproxMaintSavings__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_ApproxMaintSavings__c</fullName>
    <label>Approx. Maintenance Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>