force-app/main/default/objects/Opportunity/fields/NSSales_609_1_City__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>