force-app/main/default/objects/Opportunity/fields/NSSales_609_1_Comments__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>