force-app/main/default/objects/Opportunity/fields/NSSales_609_1_County__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>