force-app/main/default/objects/Opportunity/fields/NSSales_609_1_Crossover__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Crossover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crossover</label>
    <type>Checkbox</type>
</CustomField>