force-app/main/default/objects/Opportunity/fields/NSSales_609_1_FieldSalesRecommendation__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FieldSalesRecommendation__c</fullName>
    <label>Field Sales Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>