force-app/main/default/objects/Opportunity/fields/NSSales_609_1_FieldSalesResponseDate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FieldSalesResponseDate__c</fullName>
    <label>Field Sales Response Date</label>
    <type>Date</type>
</CustomField>