force-app/main/default/objects/Opportunity/fields/NSSales_609_1_FormLetterSentDate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FormLetterSentDate__c</fullName>
    <label>Form Letter Sent Date</label>
    <type>Date</type>
</CustomField>