force-app/main/default/objects/Opportunity/fields/NSSales_609_1_FSManagerApprovalOwner__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FSManagerApprovalOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>609.1 Field Sales Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>