force-app/main/default/objects/Opportunity/fields/NSSales_609_1_FSMngrApprvlOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_FSMngrApprvlOwnerEmail__c</fullName>
    <description>It stores the 609.1 FS Mngr Apprvl Owner Email</description>
    <label>609.1 FS Mngr Apprvl Owner Email</label>
    <type>Email</type>
</CustomField>