force-app/main/default/objects/Opportunity/fields/NSSales_609_1_Identified__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>609.1 Identified</label>
    <type>Checkbox</type>
</CustomField>