force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IDManagerApprovalOwner__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IDManagerApprovalOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>609.1 Industrial Development Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>