force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IDManagerApprovalOwnerEmai__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IDManagerApprovalOwnerEmai__c</fullName>
    <description>It stores email id for 609.1 ID Manager Approval Owner Email</description>
    <label>609.1 ID Manager Approval Owner Email</label>
    <type>Email</type>
</CustomField>