force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IndustryContactAddress__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IndustryContactAddress__c</fullName>
    <label>Industry Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>