force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IndustryContactEmail__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IndustryContactEmail__c</fullName>
    <label>Industry Contact Email</label>
    <type>Email</type>
</CustomField>