force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IndustryContactName__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IndustryContactName__c</fullName>
    <label>Industry Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>