force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IndustryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IndustryContactPhone__c</fullName>
    <label>Industry Contact Phone</label>
    <type>Phone</type>
</CustomField>