force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IndustryInvestment__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IndustryInvestment__c</fullName>
    <label>Industry Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>