force-app/main/default/objects/Opportunity/fields/NSSales_609_1_IndustryLegalName__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_IndustryLegalName__c</fullName>
    <label>Industry Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>