force-app/main/default/objects/Opportunity/fields/NSSales_609_1_JointFacilitiesReview__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_JointFacilitiesReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Facilities Review</label>
    <type>Checkbox</type>
</CustomField>