force-app/main/default/objects/Opportunity/fields/NSSales_609_1_Latitude__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Latitude__c</fullName>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>