force-app/main/default/objects/Opportunity/fields/NSSales_609_1_Longitude__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Longitude__c</fullName>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>