force-app/main/default/objects/Opportunity/fields/NSSales_609_1_Milepost__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Milepost__c</fullName>
    <label>Milepost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>