force-app/main/default/objects/Opportunity/fields/NSSales_609_1_OperatingDivision__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_OperatingDivision__c</fullName>
    <label>Operating Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALABAMA</fullName>
            </value>
            <value>
                <fullName>DEARBORN</fullName>
            </value>
            <value>
                <fullName>GEORGIA</fullName>
            </value>
            <value>
                <fullName>HARRISBURG</fullName>
            </value>
            <value>
                <fullName>ILLINOIS</fullName>
            </value>
            <value>
                <fullName>LAKE</fullName>
            </value>
            <value>
                <fullName>PIEDMONT</fullName>
            </value>
            <value>
                <fullName>PITTSBURGH</fullName>
            </value>
            <value>
                <fullName>POCAHONTAS</fullName>
            </value>
            <value>
                <fullName>ALAB</fullName>
                <isActive>false</isActive>
                <label>ALAB</label>
            </value>
            <value>
                <fullName>DEAR</fullName>
                <isActive>false</isActive>
                <label>DEAR</label>
            </value>
            <value>
                <fullName>GEOR</fullName>
                <isActive>false</isActive>
                <label>GEOR</label>
            </value>
            <value>
                <fullName>HARR</fullName>
                <isActive>false</isActive>
                <label>HARR</label>
            </value>
            <value>
                <fullName>ILLN</fullName>
                <isActive>false</isActive>
                <label>ILLN</label>
            </value>
            <value>
                <fullName>PIED</fullName>
                <isActive>false</isActive>
                <label>PIED</label>
            </value>
            <value>
                <fullName>PITT</fullName>
                <isActive>false</isActive>
                <label>PITT</label>
            </value>
            <value>
                <fullName>POCA</fullName>
                <isActive>false</isActive>
                <label>POCA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>